Fix button overflow

--- a/client/src/Components/AdminForms/AdminForms.scss
+++ b/client/src/Components/AdminForms/AdminForms.scss
@@ -66,14 +66,11 @@
         .add-text-area {
           font-size: 16pt;
           width: 200px;
-          height: 40px;
           align-self: center;
         }
         #toggle {
           background-color: #fff;
-          box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.6);
           text-align: left;
-
           align-self: center;
           display: inline-block;
           position: relative;
@@ -143,9 +140,7 @@
   }
   #toggle {
     background-color: #fff;
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.6);
     text-align: left;
-
     align-self: center;
     display: inline-block;
     position: relative;
